--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: main
 
+permissions:
+  contents: read
+  actions: read
+  pull-requests: read
+
 jobs:
   test:
     runs-on: ubuntu-latest
